# OpenMP-parallelized-3D-Ray-Tracing

./: .gitignore  CMakeLists.txt  README.md  bench_results.json  plot_benchmark.py
Given Example/: SimpleRenderWithSTL.py  test.stl
src/: Scene.cpp  Scene.h  Scene.hpp  intersect.c  intersect.h  main.cpp  stl_loader.c  stl_loader.cpp  stl_loader.h  stl_loader.hpp  triangle.cpp  triangle.h  triangle.hpp  vec3.h  vec3.hpp  write_ppm.cpp  write_ppm.hpp
